Added new TPJ article and updated pod lists.

--- a/tt/index.html
+++ b/tt/index.html
@@ -23,6 +23,11 @@ CCP4 email list, and in fact it predates it.
 
 <ul>
 
+<li><b>2004-08-31</b> Article by Simon Cozens in 
+<a href="http://www.tpj.com/documents/s=7618/tpj0408/">The Perl Journal</a>
+describes how to use PerlMol and 
+<a href="http://search.cpan.org/dist/OpenGL-Simple-Viewer/">OpenGL::Simple::Viewer</a> 
+to create a simple 3D molecular viewer. [Requires subscription]
 <li><b>2004-08-12</b> Chemistry-Ring-0.18 released
 <li><b>2004-08-11</b> Chemistry-FormulaPattern-0.10 and Chemistry-Ring-0.17 
 released
@@ -30,8 +35,6 @@ released
 <li><b>2004-08-06</b> Chemistry-Mok-0.23 released
 <li><b>2004-08-06</b> Chemistry-Mol-0.26, Chemistry-File-SMILES-0.42, and
 Chemistry-File-SMARTS-0.20 released.
-<li><b>2004-08-05</b> Chemistry-Pattern-0.25 released
-<li><b>2004-08-02</b> Chemistry-File-XYZ-0.11, Chemistry-InternalCoords-0.17,
 Chemistry-Ring-0.16 released.
 
 </ul>
