--- a/tt/pod/index.html
+++ b/tt/pod/index.html
@@ -84,15 +84,25 @@ The contents of the latest PerlMol bundle are listed in the PerlMol chapter.</p>
 
 <h2>Publications</h2>
 
+The following publications either describe, use, or cite PerlMol in some way.
+
 <ul>
 
-<li>F. Rosselló, G. Valiente. <a
+<li>Rosselló, F.; Valiente, G. <a
 href="http://www.lsi.upc.es/%7Evaliente/abs-grabats-2004.html">Chemical Graphs,
 Chemical Reaction Graphs, and Chemical Graph Transformation.</a> To appear in
-Proc. 2nd Int. Workshop on Graph-Based Tools, Electronic Notes in Computer
-Science 2004 (abstract available).
+Proc. 2nd Int. Workshop on Graph-Based Tools, Electronic Notes in Theoretical 
+Computer Science 2004 (Abstract available online).
 
-<li>Tubert-Brohman, I. Perl and Chemistry. <a href="http://www.tpj.com/">The Perl Journal</a> 2004-06 (subscription required)
+<li>Cozens, S. Molecular Biology With Perl. 
+<a href="http://www.tpj.com/documents/s=7618/tpj0408/">The Perl Journal 
+<b>2004</b>, <i>8[8]</i></a>, 15-19 
+(Full text available online; requires subscription)
+
+<li>Tubert-Brohman, I. Perl and Chemistry. 
+<a href="http://www.tpj.com/">The Perl Journal
+<b>2004</b>, <i>8[6]</i></a> 3-5
+(Full text available online; requires subscription)
 
 </ul>
 
