Added Chemistry::Reaction and updated the links to external references

--- a/tt/index.html
+++ b/tt/index.html
@@ -23,6 +23,8 @@ CCP4 email list, and in fact it predates it.
 
 <ul>
 
+<li><b>2004-09-26</b> Chemistry-Reaction-0.02 released
+<li><b>2004-09-24</b> Chemistry-InternalCoords-0.18 released
 <li><b>2004-08-31</b> Article by Simon Cozens in 
 <a href="http://www.tpj.com/documents/s=7618/tpj0408/">The Perl Journal</a>
 describes how to use PerlMol and 
@@ -32,8 +34,6 @@ to create a simple 3D molecular viewer. [Requires subscription]
 <li><b>2004-08-11</b> Chemistry-FormulaPattern-0.10 and Chemistry-Ring-0.17 
 released
 <li><b>2004-08-10</b> Chemistry-File-SLN-0.10 released
-<li><b>2004-08-06</b> Chemistry-Mok-0.23 released
-<li><b>2004-08-06</b> Chemistry-Mol-0.26, Chemistry-File-SMILES-0.42, and
 Chemistry-File-SMARTS-0.20 released.
 Chemistry-Ring-0.16 released.
 
@@ -53,6 +53,7 @@ current implementation for a given feature.
 <li><a href="http://search.cpan.org/dist/Chemistry-Pattern/">Chemistry-Pattern</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-FormulaPattern/">Chemistry-FormulaPattern</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-MidasPattern/">Chemistry-MidasPattern</a>
+<li><a href="http://search.cpan.org/dist/Chemistry-Reaction/">Chemistry-Reaction</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-Bond-Find/">Chemistry-Bond-Find</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-Canonicalize/">Chemistry-Canonicalize</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-Ring/">Chemistry-Ring</a>
