--- a/tt/pod/index.html
+++ b/tt/pod/index.html
@@ -29,6 +29,7 @@ The contents of the latest PerlMol bundle are listed in the PerlMol chapter.</p>
         <ul>
             <li><a href="Chemistry/FormulaPattern.html">Chemistry::FormulaPattern</a>
             <li><a href="Chemistry/MidasPattern.html">Chemistry::MidasPattern</a>
+            <li><a href="Chemistry/Reaction.html">Chemistry::Reaction</a>
         </ul>
         <li><a href="Chemistry/Domain.html">Chemistry::Domain</a>
         <li><a href="Chemistry/MacroMol.html">Chemistry::MacroMol</a>
@@ -88,21 +89,24 @@ The following publications either describe, use, or cite PerlMol in some way.
 
 <ul>
 
-<li>Rosselló, F.; Valiente, G. <a
-href="http://www.lsi.upc.es/%7Evaliente/abs-grabats-2004.html">Chemical Graphs,
+<li>Rosselló, F.; Valiente, G. Chemical Graphs,
 Chemical Reaction Graphs, and Chemical Graph Transformation.</a> To appear in
 Proc. 2nd Int. Workshop on Graph-Based Tools, Electronic Notes in Theoretical 
-Computer Science 2004 (Abstract available online).
+Computer Science <b>2004</b>
+
+(<a href="http://www.lsi.upc.es/%7Evaliente/abs-grabats-2004.html">Abstract</a>; 
+<a href="http://tfs.cs.tu-berlin.de/grabats/Final04/valiente.pdf">Full text</a>).
+
 
 <li>Cozens, S. Molecular Biology With Perl. 
-<a href="http://www.tpj.com/documents/s=7618/tpj0408/">The Perl Journal 
-<b>2004</b>, <i>8[8]</i></a>, 15-19 
-(Full text available online; requires subscription)
+The Perl Journal 
+<b>2004</b>, <i>8[8]</i>, 15-19 
+(<a href="http://www.tpj.com/documents/s=7618/tpj0408/">Full text</a>; requires subscription)
 
 <li>Tubert-Brohman, I. Perl and Chemistry. 
-<a href="http://www.tpj.com/">The Perl Journal
-<b>2004</b>, <i>8[6]</i></a> 3-5
-(Full text available online; requires subscription)
+The Perl Journal
+<b>2004</b>, <i>8[6]</i> 3-5
+(<a href="http://www.tpj.com/documents/s=7618/tpj0406/">Full text</a>; requires subscription)
 
 </ul>
 
