--- a/tt/index.html
+++ b/tt/index.html
@@ -23,6 +23,7 @@ CCP4 email list, and in fact it predates it.
 
 <ul>
 
+<li><b>2004-11-07</b> Chemistry-Isotope-0.10 released
 <li><b>2004-09-26</b> Chemistry-Reaction-0.02 released
 <li><b>2004-09-24</b> Chemistry-InternalCoords-0.18 released
 <li><b>2004-08-31</b> Article by Simon Cozens in 
@@ -66,6 +67,7 @@ current implementation for a given feature.
 <li><a href="http://search.cpan.org/dist/Chemistry-File-PDB/">Chemistry-File-PDB</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-MacroMol/">Chemistry-MacroMol</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-File-XYZ/">Chemistry-File-XYZ</a>
+<li><a href="http://search.cpan.org/dist/Chemistry-Isotope/">Chemistry-Isotope</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-Mok/">Chemistry-Mok</a>
 <li><a href="http://search.cpan.org/dist/PerlMol/">PerlMol</a>
 
