--- a/tt/pod/index.html
+++ b/tt/pod/index.html
@@ -71,6 +71,7 @@ The contents of the latest PerlMol bundle are listed in the PerlMol chapter.</p>
 <li><a href="Chemistry/Canonicalize.html">Chemistry::Canonicalize</a>
 <li><a href="Chemistry/InternalCoords/Builder.html">Chemistry::InternalCoords::Builder</a>
 <li><a href="Chemistry/Ring/Find.html">Chemistry::Ring::Find</a>
+<li><a href="Chemistry/Isotope.html">Chemistry::Isotope</a>
 </ul>
 
 <h2>Programs (scripts)</h2>
