Chemistry-Mol-0.30; changed PDF size to 300 KB

--- a/tt/index.html
+++ b/tt/index.html
@@ -15,14 +15,11 @@ substructure matching; and reading and writing files in various formats.
 For a more detailed feature list, see the <a href="features.html">Features</a>
 section.
 
-<p>Please note that this project has nothing to do (I hope) with the April
-fool's <a href="http://www.ccp4.ac.uk/news/msg00397.html">email</a> sent to the
-CCP4 email list, and in fact it predates it.
-
 <h2>Recent News</h2>
 
 <ul>
 
+<li><b>2004-11-09</b> Chemistry-Mol-0.30 released
 <li><b>2004-11-07</b> Chemistry-Isotope-0.10 released
 <li><b>2004-09-26</b> Chemistry-Reaction-0.02 released
 <li><b>2004-09-24</b> Chemistry-InternalCoords-0.18 released
@@ -31,12 +28,6 @@ CCP4 email list, and in fact it predates it.
 describes how to use PerlMol and 
 <a href="http://search.cpan.org/dist/OpenGL-Simple-Viewer/">OpenGL::Simple::Viewer</a> 
 to create a simple 3D molecular viewer. [Requires subscription]
-<li><b>2004-08-12</b> Chemistry-Ring-0.18 released
-<li><b>2004-08-11</b> Chemistry-FormulaPattern-0.10 and Chemistry-Ring-0.17 
-released
-<li><b>2004-08-10</b> Chemistry-File-SLN-0.10 released
-Chemistry-File-SMARTS-0.20 released.
-Chemistry-Ring-0.16 released.
 
 </ul>
 
