Added data section to features list, contributors to the main page, and new molecular biology reference to the pod index.

--- a/tt/features.html
+++ b/tt/features.html
@@ -71,6 +71,12 @@ class="value">2
 <tr> <td class="name">A "printf" for molecules and atoms <td class="value">3
 </table>
 
+<h2>Data</h2>
+<table class="features">
+<tr> <td class="name">Relative atomic masses<td class="value">4
+<tr> <td class="name">Exact isotope masses<td class="value">4
+</table>
+
 <h2>Mini-language</h2>
 <table class="features">
 <tr> <td class="name">Mok - "an AWK for molecules"<td class="value">3
