--- a/tt/pod/index.html
+++ b/tt/pod/index.html
@@ -90,6 +90,9 @@ The following publications either describe, use, or cite PerlMol in some way.
 
 <ul>
 
+<li>Rosselló, F.; Valiente, G. Graph Transformation in Molecular Biology.
+(<a href="http://bioinfo.uib.es/~cesc/recerca/he-paper.pdf">Full text</a>).
+
 <li>Rosselló, F.; Valiente, G. Chemical Graphs,
 Chemical Reaction Graphs, and Chemical Graph Transformation.</a> To appear in
 Proc. 2nd Int. Workshop on Graph-Based Tools, Electronic Notes in Theoretical 
