--- a/tt/index.html
+++ b/tt/index.html
@@ -19,6 +19,7 @@ section.
 
 <ul>
 
+<li><b>2004-11-10</b> Chemistry-Mol-0.31 released
 <li><b>2004-11-09</b> Chemistry-Mol-0.30 released
 <li><b>2004-11-07</b> Chemistry-Isotope-0.10 released
 <li><b>2004-09-26</b> Chemistry-Reaction-0.02 released
@@ -36,8 +37,8 @@ to create a simple 3D molecular viewer. [Requires subscription]
 <p>The current status could be called "alpha", because there are still many 
 missing or untested features, but there is enough for being useful for some
 real work.
-The <a href="features.html">Feature list</a> shows how complete is the 
-current implementation for a given feature.
+The <a href="features.html">Feature list</a> shows how complete the 
+current implementation for a given feature is.
 
 <p>The following CPAN distributions have been released:
 <ul>
@@ -64,10 +65,20 @@ current implementation for a given feature.
 
 </ul>
 
-<h2>Author</h2> <p>The PerlMol project is being developed by <a
-href="http://ivan.tubert.org/">Ivan Tubert-Brohman</a>, a graduate student at
-Yale University. If anyone would like to help, please 
-<a href="mailto:itubert@users.sourceforge.net">send me an email</a>
+<h2>Authors</h2> <p>The PerlMol project was started and is being led and
+maintained by <a href="http://ivan.tubert.org/">Ivan Tubert-Brohman</a>, a
+graduate student at Yale University.  Other contributors include:
+
+<ul>
+<li>Gabriel Valiente (Technical University of Catalonia) 
+    - Chemistry::Reaction module.</li>
+<li>Brent Gregersen - formula parsing patch for Chemistry::File::Formula.</li>
+<li>... and many people that have sent helpful suggestions, questions, tests, 
+and bug reports.</li>
+</ul>
+
+<p>If anyone else would like to help, please 
+<a href="mailto:itubert@users.sourceforge.net">send me an email</a>.
 
 </div>
 
