--- a/tt/index.html
+++ b/tt/index.html
@@ -19,12 +19,12 @@ section.
 
 <ul>
 
+<li><b>2005-01-31</b> Chemistry-File-MDLMol-0.19 released
+<li><b>2005-01-27</b> Chemistry-File-MDLMol-0.18 released
+<li><b>2004-11-17</b> Chemistry-File-SMILES-0.43 released
 <li><b>2004-11-10</b> Chemistry-Mol-0.31 released
 <li><b>2004-11-09</b> Chemistry-Mol-0.30 released
 <li><b>2004-11-07</b> Chemistry-Isotope-0.10 released
-<li><b>2004-09-26</b> Chemistry-Reaction-0.02 released
-<li><b>2004-09-24</b> Chemistry-InternalCoords-0.18 released
-<li><b>2004-08-31</b> Article by Simon Cozens in 
 <a href="http://www.tpj.com/documents/s=7618/tpj0408/">The Perl Journal</a>
 describes how to use PerlMol and 
 <a href="http://search.cpan.org/dist/OpenGL-Simple-Viewer/">OpenGL::Simple::Viewer</a> 
