--- a/tt/pod/index.html
+++ b/tt/pod/index.html
@@ -110,7 +110,8 @@ The Perl Journal
 <li>Tubert-Brohman, I. Perl and Chemistry. 
 The Perl Journal
 <b>2004</b>, <i>8[6]</i> 3-5
-(<a href="http://www.tpj.com/documents/s=7618/tpj0406/">Full text</a>; requires subscription)
+(<a href="http://www.tpj.com/documents/s=7618/tpj0406/">Full text</a>: requires subscription;
+(<a href="http://64.233.179.104/search?q=cache%3Awww.tpj.com%2Fdocuments%2Fs%3D7618%2Ftpj0406%2F&btnG=Search#4">Google cache</a>: it seems that the GoogleBot is subscribed!).
 
 </ul>
 
