Updated several modules, added the 3dbuilder and vrml modules

--- a/tt/features.html
+++ b/tt/features.html
@@ -34,6 +34,8 @@ the appropriate manpage.
 <tr> <td class="name">Z-matrix builder: create an internal coordinate 
 representation of a molecule from scratch using the Cartesian coordinates
     <td class="value">3
+<tr> <td class="name">3D molecule structure builder: generate atomic coordinates from a connection table 
+    <td class="value">1
 <tr> <td class="name">Calculate the centroid and best-fit plane of a ring <td class="value">4
 </table>
 
@@ -67,6 +69,7 @@ class="value">2
 <tr> <td class="name">Formula pattern parser <td class="value">4
 <tr> <td class="name">Mopac input file parser/writer <td class="value">3
 <tr> <td class="name">XYZ format file parser/writer <td class="value">4
+<tr> <td class="name">VRML format file writer <td class="value">3
 <tr> <td class="name">Perl Data::Dumper file format <td class="value">4
 <tr> <td class="name">A "printf" for molecules and atoms <td class="value">3
 </table>
@@ -94,4 +97,3 @@ is welcome, however, even if I can't implement the feature myself.
 
 </body>
 </html>
-
