--- a/tt/index.html
+++ b/tt/index.html
@@ -19,16 +19,14 @@ section.
 
 <ul>
 
-<li><b>2005-01-31</b> Chemistry-File-MDLMol-0.19 released
-<li><b>2005-01-27</b> Chemistry-File-MDLMol-0.18 released
-<li><b>2004-11-17</b> Chemistry-File-SMILES-0.43 released
-<li><b>2004-11-10</b> Chemistry-Mol-0.31 released
-<li><b>2004-11-09</b> Chemistry-Mol-0.30 released
-<li><b>2004-11-07</b> Chemistry-Isotope-0.10 released
-<a href="http://www.tpj.com/documents/s=7618/tpj0408/">The Perl Journal</a>
-describes how to use PerlMol and 
-<a href="http://search.cpan.org/dist/OpenGL-Simple-Viewer/">OpenGL::Simple::Viewer</a> 
-to create a simple 3D molecular viewer. [Requires subscription]
+<li><b>2005-05-16</b> Updated distributions: Chemistry-Mol-0.34, Chemistry-Mok-0.25, Chemistry-Pattern-0.26, Chemistry-File-PDB-0.21, Chemistry-MidasPattern-0.11, Chemistry-File-SMARTS-0.22
+<li><b>2005-05-16</b> Chemistry-File-VRML-0.10 released (new distribution!)
+<li><b>2005-05-06</b> Chemistry-3DBuilder-0.10 released (new distribution!)
+<li><b>2005-03-29</b> Chemistry-File-SLN-0.11, Chemistry-Mol-0.33, 
+Chemistry-File-SMILES-0.44, and Chemistry-Ring-0.19 released
+<li><b>2005-03-04</b> <b>New PerlMol Bundle!</b> - PerlMol-0.3200 released, both as a standard .tar.gz distribution and as an PPM package.
+<li><b>2005-03-04</b> Chemistry-Mok-0.24 released
+<li><b>2005-02-24</b> Chemistry-Mol-0.32 released
 
 </ul>
 
@@ -51,6 +49,7 @@ current implementation for a given feature is.
 <li><a href="http://search.cpan.org/dist/Chemistry-Canonicalize/">Chemistry-Canonicalize</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-Ring/">Chemistry-Ring</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-InternalCoords/">Chemistry-InternalCoords</a>
+<li><a href="http://search.cpan.org/dist/Chemistry-3DBuilder/">Chemistry-3DBuilder</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-File-SLN/">Chemistry-File-SLN</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-File-SMILES/">Chemistry-File-SMILES</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-File-SMARTS/">Chemistry-File-SMARTS</a>
@@ -58,6 +57,7 @@ current implementation for a given feature is.
 <li><a href="http://search.cpan.org/dist/Chemistry-File-Mopac/">Chemistry-File-Mopac</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-File-PDB/">Chemistry-File-PDB</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-MacroMol/">Chemistry-MacroMol</a>
+<li><a href="http://search.cpan.org/dist/Chemistry-File-VRML/">Chemistry-File-VRML</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-File-XYZ/">Chemistry-File-XYZ</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-Isotope/">Chemistry-Isotope</a>
 <li><a href="http://search.cpan.org/dist/Chemistry-Mok/">Chemistry-Mok</a>
