--- a/tt/pod/index.html
+++ b/tt/pod/index.html
@@ -7,11 +7,12 @@
 <h1>PerlMol - Reference Manual</h1> 
 
 <p>Here is the perldoc documentation for each module, converted to HTML.  If
-you prefer, the whole thing is also available as one big (about 300 KB) PDF
-file: <a href="perlmol.pdf">perlmol.pdf</a>. Please note that this PDF
-file includes the documentation for the latest version of every module, which 
+you prefer, the whole thing is also available as one big (about 100 pages, 300
+KB) PDF file: <a href="perlmol.pdf">perlmol.pdf</a>. Please note that this PDF
+file includes the documentation for the latest version of every module, which
 is not always the same as the version included in the latest PerlMol bundle.
-The contents of the latest PerlMol bundle are listed in the PerlMol chapter.</p>
+The contents of the latest PerlMol bundle are listed in the PerlMol
+chapter.</p>
 
 <h2>Tutorials</h2>
 <ul>
@@ -58,6 +59,7 @@ The contents of the latest PerlMol bundle are listed in the PerlMol chapter.</p>
     <li><a href="Chemistry/File/SLN.html">Chemistry::File::SLN</a>
     <li><a href="Chemistry/File/SMARTS.html">Chemistry::File::SMARTS</a>
     <li><a href="Chemistry/File/SMILES.html">Chemistry::File::SMILES</a>
+    <li><a href="Chemistry/File/VRML.html">Chemistry::File::VRML</a>
     <li><a href="Chemistry/File/XYZ.html">Chemistry::File::XYZ</a>
     </ul>
 <li><a href="Chemistry/InternalCoords.html">Chemistry::InternalCoords</a>
@@ -70,6 +72,7 @@ The contents of the latest PerlMol bundle are listed in the PerlMol chapter.</p>
 <li><a href="Chemistry/Bond/Find.html">Chemistry::Bond::Find</a>
 <li><a href="Chemistry/Canonicalize.html">Chemistry::Canonicalize</a>
 <li><a href="Chemistry/InternalCoords/Builder.html">Chemistry::InternalCoords::Builder</a>
+<li><a href="Chemistry/3DBuilder.html">Chemistry::3DBuilder</a>
 <li><a href="Chemistry/Ring/Find.html">Chemistry::Ring::Find</a>
 <li><a href="Chemistry/Isotope.html">Chemistry::Isotope</a>
 </ul>
@@ -110,8 +113,7 @@ The Perl Journal
 <li>Tubert-Brohman, I. Perl and Chemistry. 
 The Perl Journal
 <b>2004</b>, <i>8[6]</i> 3-5
-(<a href="http://www.tpj.com/documents/s=7618/tpj0406/">Full text</a>: requires subscription;
-(<a href="http://64.233.179.104/search?q=cache%3Awww.tpj.com%2Fdocuments%2Fs%3D7618%2Ftpj0406%2F&btnG=Search#4">Google cache</a>: it seems that the GoogleBot is subscribed!).
+(<a href="http://www.tpj.com/documents/s=7618/tpj0406/">Full text</a>: requires subscription).
 
 </ul>
 
