--- a/tt/pod/index.html
+++ b/tt/pod/index.html
@@ -96,13 +96,15 @@ The following publications either describe, use, or cite PerlMol in some way.
 <li>Rosselló, F.; Valiente, G. Graph Transformation in Molecular Biology.
 (<a href="http://bioinfo.uib.es/~cesc/recerca/he-paper.pdf">Full text</a>).
 
-<li>Rosselló, F.; Valiente, G. Chemical Graphs,
-Chemical Reaction Graphs, and Chemical Graph Transformation.</a> To appear in
-Proc. 2nd Int. Workshop on Graph-Based Tools, Electronic Notes in Theoretical 
-Computer Science <b>2004</b>
+<li>Rosselló, F.; Valiente, G. Chemical Graphs, Chemical Reaction Graphs, and
+Chemical Graph Transformation.</a> Proc. 2nd Int. Workshop on Graph-Based
+Tools, <i>Electronic Notes in Theoretical Computer Science</i> <b>2005</b>,
+<i>127</i>, 157-166. <a
+href="http://dx.doi.org/10.1016/j.entcs.2004.12.033">doi:
+10.1016/j.entcs.2004.12.033</a>
 
 (<a href="http://www.lsi.upc.es/%7Evaliente/abs-grabats-2004.html">Abstract</a>; 
-<a href="http://tfs.cs.tu-berlin.de/grabats/Final04/valiente.pdf">Full text</a>).
+<a href="http://tfs.cs.tu-berlin.de/grabats/Final04/valiente.pdf">Preprint full text</a>).
 
 
 <li>Cozens, S. Molecular Biology With Perl. 
