--- a/ttlib/nav.html
+++ b/ttlib/nav.html
@@ -3,6 +3,7 @@
     { link => '/features.html', text => 'Features' }
     { link => '/pod/Chemistry/Tutorial.html', text => 'Quick Tutorial' }
     { link => '/pod/index.html', text => 'Reference Manual' }
+    { link => '/examples/index.html', text => 'Examples' }
     { link => '/download.html', text => 'Download &amp; Installation' }
     { link => '/lists.html', 
         text => 'Mailing List' }
