Mother's day update

--- a/tt/lists.html
+++ b/tt/lists.html
@@ -12,7 +12,7 @@ list may be split into a developers list, a users lists, and maybe an
 anouncements list.
 
 <p><b>perlmol-user</b>: 
-<a href="http://lists.sourceforge.net/lists/listinfo/perlmol-user">[subscribe</a>
+[ <a href="http://lists.sourceforge.net/lists/listinfo/perlmol-user">subscribe</a>
 | <a href="http://sourceforge.net/mailarchive/forum.php?forum=perlmol-user">archive</a> ]
 
 <h2>Privacy notice</h2>
