--- a/tt/index.html
+++ b/tt/index.html
@@ -19,16 +19,9 @@ section.
 
 <ul>
 
-<li><b>2005-05-24</b> <b>New PerlMol Bundle!</b> - PerlMol-0.3500 released, both as a standard .tar.gz distribution and as an PPM package.
-<li><b>2005-05-23</b> Added the <a href="examples/">Examples</a> section to the website.
-<li><b>2005-05-20</b> Updated distributions: Chemistry-Mol-0.35, Chemistry-File-MDLMol-0.20
-<li><b>2005-05-16</b> Updated distributions: Chemistry-Isotope-0.11
-<li><b>2005-05-16</b> Updated distributions: Chemistry-Mol-0.34, Chemistry-Mok-0.25, Chemistry-Pattern-0.26, Chemistry-File-PDB-0.21, Chemistry-MidasPattern-0.11, Chemistry-File-SMARTS-0.22
-<li><b>2005-05-16</b> Chemistry-File-VRML-0.10 released (new distribution!)
-<li><b>2005-05-06</b> Chemistry-3DBuilder-0.10 released (new distribution!)
-<li><b>2005-03-29</b> Chemistry-File-SLN-0.11, Chemistry-Mol-0.33, 
-Chemistry-File-SMILES-0.44, and Chemistry-Ring-0.19 released
-<li><b>2005-03-04</b> <b>New PerlMol Bundle!</b> - PerlMol-0.3200 released, both as a standard .tar.gz distribution and as an PPM package.
+<li><b>2009-05-10</b> Updated distributions: Chemistry-Mol-0.37, Chemistry-Pattern-0.27,
+    Chemistry-Ring-0.20, Chemistry-Canonicalize-0.11, Chemistry-Bond-Find-0.23
+    Chemistry-File-MDLMol-0.21, Chemistry-File-PDB-0.23, Chemistry-File-SMILES-0.46,
 
 </ul>
 
@@ -68,8 +61,8 @@ current implementation for a given feature is.
 </ul>
 
 <h2>Authors</h2> <p>The PerlMol project was started and is being led and
-maintained by <a href="http://ivan.tubert.org/">Ivan Tubert-Brohman</a>, a
-graduate student at Yale University.  Other contributors include:
+maintained by <a href="http://ivan.tubert.org/">Ivan Tubert-Brohman</a>.
+Other contributors include:
 
 <ul>
 <li>Gabriel Valiente (Technical University of Catalonia) 
