Update viewcvs link

--- a/tt/download.html
+++ b/tt/download.html
@@ -4,7 +4,7 @@
 [% 
     SET version = "0.3500";
     SET ppd_version = "0.35_00";
-    SET perl_version = "5.8.6";
+    SET perl_version = "5.8.8";
 %]
 
 <!-- main content -->
@@ -13,10 +13,10 @@
 
 <p>The PerlMol modules are being developed for perl 5.8.x and are known to work
 under Windows, Linux, FreeBSD, Solaris, and OS X. They are backward-compatible
-with perl 5.6.x, but you are strongly encouraged to upgrade to [% perl_version
-%] because support for older versions may be removed in the future. PerlMol
-depends on other modules available on CPAN, such as Math::VectorReal. See the
-README files for details.
+with perl 5.6.x, but you are strongly encouraged to upgrade to 5.8.x because
+support for older versions may be removed in the future. PerlMol depends on
+other modules available on CPAN, such as Math::VectorReal. See the README files
+for details.
 
 <p>There are three main ways of installing the PerlMol modules:
 
@@ -145,7 +145,7 @@ modules (which are included with perl-5.8.0):</p>
 <p>If you are interested in helping develop PerlMol or you want to take
 a look at the latest developments, you can take a look at the
 <abbr title="Concurrent Versions System">CVS</abbr> repository, either
-through the <a href="http://cvs.perlmol.org/viewcvs.py/perlmol/">ViewCVS</a>
+through the <a href="http://perlmol.cvs.sourceforge.net/perlmol/">ViewVC</a>
 web interface, or through any CVS client. To connect anonymously using
 the command-line CVS client, use the following commands:
 
