Updated pod index, added a couple of book refs., cleanup makefile

--- a/tt/pod/index.html
+++ b/tt/pod/index.html
@@ -55,6 +55,7 @@ chapter.</p>
     href="Chemistry/File/MidasPattern.html">Chemistry::File::MidasPattern</a>
     <li><a href="Chemistry/File/Mopac.html">Chemistry::File::Mopac</a>
     <li><a href="Chemistry/File/PDB.html">Chemistry::File::PDB</a>
+    <li><a href="Chemistry/File/QChemOut.html">Chemistry::File::QChemOut</a>
     <li><a href="Chemistry/File/SDF.html">Chemistry::File::SDF</a>
     <li><a href="Chemistry/File/SLN.html">Chemistry::File::SLN</a>
     <li><a href="Chemistry/File/SMARTS.html">Chemistry::File::SMARTS</a>
@@ -92,6 +93,12 @@ chapter.</p>
 The following publications either describe, use, or cite PerlMol in some way.
 
 <ul>
+
+<li>O'Donnel, T. J. <i>Design and Use of Relational Databases in Chemistry</i>
+CRC Press, <b>2008</b>, ISBN 1420064428, p. 188.
+
+<li>Mannhold, R. <i>Molecular drug properties: measurement and prediction</i>.
+Wiley-VCH, <b>2007</b> ISBN 3527317554, p. 120.
 
 <li>Rosselló, F.; Valiente, G. Graph Transformation in Molecular Biology.
 (<a href="http://bioinfo.uib.es/~cesc/recerca/he-paper.pdf">Full text</a>).
